<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bluebg" >

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="71dp"
        android:background="@drawable/playm"
        android:contentDescription="@string/play_button"
        android:scaleType="fitXY" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/playButton"
        android:layout_marginLeft="57dp"
        android:layout_toRightOf="@+id/playButton"
        android:background="@drawable/profilem"
        android:contentDescription="@string/profile_button"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/reward_image_view" />

</RelativeLayout>