<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/redbg" >

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="30dp"
        android:text="@string/prof_default_name"
        android:textColor="#FFFFFF" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profileNick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/profileName"
        android:layout_below="@+id/profileName"
        android:layout_marginTop="14dp"
        android:text="@string/prof_default_nick" 
        android:textColor="#FFFFFF" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profilePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profileNick"
        android:layout_alignBottom="@+id/profileNick"
        android:layout_alignLeft="@+id/profileSurname"
        android:text="@string/prof_default_pass" 
        android:textColor="#FFFFFF" 
        android:textStyle="bold"/>

    <ExpandableListView
        android:id="@+id/profileGoalsRec"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/profileNick"
        android:layout_marginTop="17dp" >
    </ExpandableListView>

    <TextView
        android:id="@+id/profileSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profileName"
        android:layout_alignBottom="@+id/profileName"
        android:layout_alignParentRight="true"
        android:layout_marginRight="96dp"
        android:text="@string/prof_default_surname"
        android:textColor="#FFFFFF" 
        android:textStyle="bold"/>

</RelativeLayout>